<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC000000"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <CheckBox

            android:id="@+id/cbdocente"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:button="@android:drawable/alert_dark_frame"
            android:text="Docente"
            android:textAlignment="center"
            android:textColor="#FFFFFF">

        </CheckBox>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Grupo 250"
                android:textColor="#FFFFFF" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Grupo 350"
                android:textColor="#FFFFFF" />
        </RadioGroup>


    </LinearLayout>

    Estudiante 1

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Calcular_Alejandro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="13dp"
            android:backgroundTint="#047AF8"
            android:text="@string/Alejandro_Gomez">

        </Button>

        <EditText
            android:id="@+id/etValor1A"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Nota1_A">

        </EditText>

        <EditText
            android:id="@+id/etValor2A"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Nota1_A">

        </EditText>

        <EditText
            android:id="@+id/etValor3A"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Nota1_A">

        </EditText>

        <EditText
            android:id="@+id/etValor4A"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Nota1_A">

        </EditText>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resultadoA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="13dp"
            android:text="@string/Resultado1"
            android:textColor="#FFFFFF"
            android:textSize="20sp">

        </TextView>

        <TextView
            android:id="@+id/tvresultadoalejandro"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Resultadotv"
            android:textColor="#FFFFFF"
            android:textSize="20sp">

        </TextView>
    </LinearLayout>

    Estudiante 2

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Calcular_Brayan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="13dp"
            android:backgroundTint="#047AF8"
            android:text="@string/Brayan_Gomez">

        </Button>

        <EditText
            android:id="@+id/etValor1b"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Nota1_A">

        </EditText>

        <EditText
            android:id="@+id/etValor2b"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Nota1_B">

        </EditText>

        <EditText
            android:id="@+id/etValor3b"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Nota1_B">

        </EditText>

        <EditText
            android:id="@+id/etValor4b"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Nota1_B">

        </EditText>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resultadoB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="13dp"
            android:text="@string/Resultado2"
            android:textColor="#FFFFFF"
            android:textSize="20sp">

        </TextView>

        <TextView
            android:id="@+id/tvresultadobrayan"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Resultadotv2"
            android:textColor="#050505"
            android:textSize="20sp">

        </TextView>

    </LinearLayout>

    Estudiante 4

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Calcular_Carlos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="13dp"
            android:backgroundTint="#047AF8"
            android:text="@string/Carlos_Garcia">

        </Button>

        <EditText
            android:id="@+id/etValor1c"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Nota1_A">

        </EditText>

        <EditText
            android:id="@+id/etValor2c"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Nota1_B">

        </EditText>

        <EditText
            android:id="@+id/etValor3c"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Nota1_B">

        </EditText>

        <EditText
            android:id="@+id/etValor4c"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Nota1_B">

        </EditText>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resultadoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="13dp"
            android:text="@string/Resultado3"
            android:textColor="#FFFFFF"
            android:textSize="20sp">

        </TextView>

        <TextView
            android:id="@+id/tvresultadocarlos"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Resultadotv2"
            android:textColor="#050505"
            android:textSize="20sp">

        </TextView>
    </LinearLayout>

    Estudiante 3

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Calcular_david"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="13dp"
            android:backgroundTint="#047AF8"
            android:text="@string/David_Rua">

        </Button>

        <EditText
            android:id="@+id/etValor1d"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Nota1_A">

        </EditText>

        <EditText
            android:id="@+id/etValor2d"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Nota1_B">

        </EditText>

        <EditText
            android:id="@+id/etValor3d"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Nota1_B">

        </EditText>

        <EditText
            android:id="@+id/etValor4d"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Nota1_B">

        </EditText>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resultadod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="13dp"
            android:text="@string/Resultado4"
            android:textColor="#FFFFFF"
            android:textSize="20sp">

        </TextView>

        <TextView
            android:id="@+id/tvresultadodavid"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Resultadotv2"
            android:textColor="#050505"
            android:textSize="20sp">

        </TextView>
    </LinearLayout>

    <TextView
        android:id="@+id/etpasaron"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="13dp"
        android:text="Pasan"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp">

    </TextView>

    <TextView
        android:id="@+id/tvpasan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="#047AF8"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/etnopasaron"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="13dp"
        android:text="NO pasan"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp">

    </TextView>

    <TextView
        android:id="@+id/tvnopasan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="#047AF8"
        android:textSize="34sp" />


</LinearLayout>